--- a/about.html
+++ b/about.html
@@ -14,6 +14,32 @@
     <link rel="stylesheet" href="dist/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
     <script src="js/loader_htmls.js"></script>
+    <style>
+      .btn-group {
+        display: flex;
+        justify-content: start;
+        margin-top: 20px;
+      }
+
+      .btn-group a {
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 16px;
+        font-weight: bold;
+        text-align: center;
+        text-decoration: none;
+        color: black;
+        border: 2px solid black;
+        border-radius: 5px;
+        margin-right: 10px;
+        transition: background-color 0.3s ease, color 0.3s ease;
+      }
+
+      .btn-group a:hover {
+        background-color: black;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <!-- Import header -->
@@ -36,14 +62,19 @@
             <p>He is also an editor at Springer Nature, and his research focuses on innovative approaches in optoelectronics and solar energy materials. Dr. Bhattarai is passionate about using his expertise to tackle global energy challenges.</p>
 
             <p>Dr. Bhattarai completed his early education at Pub Kamrup College and Sipajhar HS & MP School. He currently resides in Guwahati, Assam, where he continues to drive significant research efforts in solar energy technologies.</p>
-            <a href="https://drive.google.com/file/d/1E4hOJYVSZsVEuiJGu2arDK3F2ENa0ert/view?usp=sharing"_blank" class="dl">View My Resume</a>
+            
+            <!-- Button Group -->
+            <div class="btn-group">
+              <a href="https://drive.google.com/file/d/1E4hOJYVSZsVEuiJGu2arDK3F2ENa0ert/view?usp=sharing" target="_blank" class="dl">View My Resume</a>
+              <a href="gallery.html" target="_blank" class="dl">Gallery</a>
+            </div>
           </div>
           <!--About content start -->
         </div>
       </div>
     </div>
     <hr>
-    <!-- <hr> -->
+    <!-- Contact Section -->
     <div class="container">
       <div class="row">
         <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 blogleft contact text-xs-center">
@@ -125,3 +156,4 @@
     <script src="dist/js/lightbox-plus-jquery.min.js"></script>
   </body>
 </html>
+  
