--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,15 @@
-<footer class="footer navbar-fixed-bottom">
+<footer class="footer navbar-fixed-bottom" style="background-color: #333; color: #fff; padding: 20px 0;">
   <div class="container">
-    <ul class="list-unstyled footerLink">
-      <!-- <li><a href="about.html">About</a></li> -->
-      <!-- <li><a href="projects.html">Projects</a></li> -->
-    </ul>
-    <p class="copyrightText">&copy; 2024 Sagar Bhattarai</p>
+    <div class="row">
+      <div class="col-md-6">
+        <ul class="list-unstyled footerLink" style="display: flex; gap: 15px; padding: 0; list-style: none;">
+          <li><a href="about.html" style="color: #fff; text-decoration: none; font-weight: bold;">About</a></li>
+          <li><a href="projects.html" style="color: #fff; text-decoration: none; font-weight: bold;">Projects</a></li>
+        </ul>
+      </div>
+      <div class="col-md-6 text-md-end">
+        <p class="copyrightText" style="margin: 0; font-size: 14px;">&copy; 2024 Sagar Bhattarai. All rights reserved.</p>
+      </div>
+    </div>
   </div>
 </footer>
