--- a/header.html
+++ b/header.html
@@ -1,23 +1,49 @@
-<header class="navbar navbar-default topNav navbar-fixed-top" id="top" role="banner" style="background-color: #f8f7f8; margin-bottom:0px; padding-bottom:20px;">
+<header class="navbar navbar-default topNav navbar-fixed-top" id="top" role="banner" style="background: linear-gradient(90deg, #4e54c8, #8f94fb); box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px 0;">
   <div class="container">
     <div class="navbar-header">
-      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a href="/" class="navbar-brand"><img height="40" src="images/logo/logo.png" alt="logo"><span>Sagar Bhattarai</span></a> </div>
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse" style="border-color: #fff;">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar" style="background-color: #fff;"></span>
+        <span class="icon-bar" style="background-color: #fff;"></span>
+        <span class="icon-bar" style="background-color: #fff;"></span>
+      </button>
+      <a href="/" class="navbar-brand" style="display: flex; align-items: center; font-weight: bold; color: #fff; font-size: 18px; text-decoration: none;">
+        <img height="40" src="images/logo/logo.png" alt="logo" style="margin-right: 10px;">
+        <span>Sagar Bhattarai</span>
+      </a>
+    </div>
 
     <!--Menu start-->
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/">Home</a></li>
-        <li><a href="publications.html">Publications</a></li>
-         <li><a href="projects.html">Projects</a></li> 
-        <li><a href="achievement-and-participations.html">Achievements and Participations</a></li>
-        <li><a href="Media_Coverage.html">Media Coverage</a></li> 
-<!--         <li><a target="_blank" href="https://docs.google.com/document/d/1dIquDqiUdGKGhw3WKkEnBi9OMcOP_3z-/edit"><u>View My Resume</u></a></li> -->
-<!--         <a target = "_blank" href="https://docs.google.com/document/d/1dIquDqiUdGKGhw3WKkEnBi9OMcOP_3z-/edit" class="dl">View My Resume</a> -->
+      <ul class="nav navbar-nav navbar-right" style="list-style: none; margin: 0; padding: 0;">
+        <li style="display: inline-block; margin: 0 10px;">
+          <a href="/" style="color: #fff; text-decoration: none; font-size: 16px; padding: 10px 15px; border-radius: 20px; transition: all 0.3s;">
+            Home
+          </a>
+        </li>
+        <li style="display: inline-block; margin: 0 10px;">
+          <a href="publications.html" style="color: #fff; text-decoration: none; font-size: 16px; padding: 10px 15px; border-radius: 20px; transition: all 0.3s;">
+            Publications
+          </a>
+        </li>
+        <li style="display: inline-block; margin: 0 10px;">
+          <a href="projects.html" style="color: #fff; text-decoration: none; font-size: 16px; padding: 10px 15px; border-radius: 20px; transition: all 0.3s;">
+            Projects
+          </a>
+        </li>
+        <li style="display: inline-block; margin: 0 10px;">
+          <a href="achievement-and-participations.html" style="color: #fff; text-decoration: none; font-size: 16px; padding: 10px 15px; border-radius: 20px; transition: all 0.3s;">
+            Achievements and Participations
+          </a>
+        </li>
+        <li style="display: inline-block; margin: 0 10px;">
+          <a href="Media_Coverage.html" style="color: #fff; text-decoration: none; font-size: 16px; padding: 10px 15px; border-radius: 20px; transition: all 0.3s;">
+            Media Coverage
+          </a>
+        </li>
       </ul>
     </nav>
     <!--Menu end-->
-
   </div>
 </header>
-<hr style="margin-top: 0px;">
+<hr style="margin-top: 0px; border: 0; border-top: 2px solid #ddd;">
