--- a/about.html
+++ b/about.html
@@ -8,152 +8,145 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/flexslider.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Lato:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/component.css">
+    <script src="js/modernizr.custom.js"></script>
     <link rel="stylesheet" href="dist/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
-    <script src="js/modernizr.custom.js"></script>
     <script src="js/loader_htmls.js"></script>
     <style>
+      /* Global consistency with header and footer */
       body {
         font-family: 'Lato', sans-serif;
+        margin: 0;
+        padding: 0;
+        background: #f4f4f4;
       }
-      header, footer {
+      .container {
+        margin-top: 100px;
+      }
+      img {
+        border-radius: 10px;
+      }
+      h3 {
+        font-size: 24px;
+        font-weight: bold;
+        color: #333;
+      }
+      a.dl {
+        display: inline-block;
+        margin-top: 20px;
+        padding: 10px 20px;
         background: linear-gradient(90deg, #6a11cb, #2575fc);
         color: #fff;
-      }
-      .navbar-brand span {
-        font-weight: bold;
-        font-size: 20px;
-        color: #fff;
-      }
-      .navbar-nav li a {
-        color: #fff;
-        font-weight: 600;
-        padding: 10px 15px;
+        text-decoration: none;
+        border-radius: 20px;
         transition: background 0.3s ease-in-out;
       }
-      .navbar-nav li a:hover {
-        background: rgba(255, 255, 255, 0.2);
-        border-radius: 20px;
+      a.dl:hover {
+        background: linear-gradient(90deg, #2575fc, #6a11cb);
       }
       .contact {
-        background: linear-gradient(90deg, #2575fc, #6a11cb);
-        color: #fff;
-        padding: 40px;
-        border-radius: 8px;
+        margin-top: 50px;
+        background: linear-gradient(90deg, rgba(58, 123, 213, 0.1), rgba(108, 92, 231, 0.1));
+        padding: 30px;
+        border-radius: 10px;
       }
-      .contact input, .contact textarea {
-        border: none;
-        border-radius: 4px;
-        margin-bottom: 20px;
+      .contact input,
+      .contact textarea {
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        margin-bottom: 15px;
         padding: 10px;
         width: 100%;
+        box-sizing: border-box;
       }
       .contact input[type="submit"] {
-        background: #fff;
-        color: #2575fc;
+        background: linear-gradient(90deg, #6a11cb, #2575fc);
+        color: #fff;
         font-weight: bold;
         cursor: pointer;
-        transition: all 0.3s ease-in-out;
+        border: none;
+        transition: background 0.3s ease-in-out;
       }
       .contact input[type="submit"]:hover {
-        background: #2575fc;
-        color: #fff;
+        background: linear-gradient(90deg, #2575fc, #6a11cb);
+      }
+      .contactDetails ul {
+        padding: 0;
+        list-style-type: none;
       }
       .contactDetails li {
-        margin: 10px 0;
+        margin-bottom: 15px;
         font-size: 16px;
       }
       .contactDetails li a {
-        color: #fff;
+        color: #2575fc;
         text-decoration: underline;
-      }
-      footer {
-        text-align: center;
-        padding: 20px 0;
-        box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
-      }
-      footer p {
-        margin: 0;
-        font-size: 16px;
-        font-weight: bold;
       }
     </style>
   </head>
   <body>
-    <!-- Header -->
-    <header class="navbar navbar-default topNav navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a href="/" class="navbar-brand">
-            <img height="40" src="images/logo/logo.png" alt="logo">
-            <span>Sagar Bhattarai</span>
-          </a>
-        </div>
-        <nav class="collapse navbar-collapse bs-navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/">Home</a></li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="achievement-and-participations.html">Achievements</a></li>
-            <li><a href="Media_Coverage.html">Media Coverage</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-
-    <!-- About Section -->
-    <div class="container" style="margin-top: 100px;">
+    <div class="container">
       <div class="row content">
+        <!-- About image -->
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-          <img src="images/latest/c.jpeg" alt="Dr. Sagar Bhattarai" class="img-responsive" style="border-radius: 8px; opacity: 0.9;">
+          <img src="images/latest/c.jpeg" title="Dr. Sagar Bhattarai" class="img-responsive" alt="Dr. Sagar Bhattarai" style="opacity:0.8;">
         </div>
+        <!-- About content -->
         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-          <h3>About Dr. Sagar Bhattarai:</h3>
-          <p>Dr. Sagar Bhattarai is a distinguished scientist, researcher, and innovator...</p>
-          <a href="https://drive.google.com/file/d/1E4hOJYVSZsVEuiJGu2arDK3F2ENa0ert/view?usp=sharing" target="_blank" class="btn btn-primary">View My Resume</a>
+          <div class="clearfix" style="text-align: justify;">
+            <h3>About Dr. Sagar Bhattarai:</h3>
+            <p>Dr. Sagar Bhattarai is a distinguished scientist, researcher, and innovator at the Indian Institute of Technology Guwahati, where he focuses on cutting-edge photovoltaic and perovskite solar cell technologies. He holds a Ph.D. from the National Institute of Technology Arunachal Pradesh, and has previously served as the Head of the Physics Department at Arunachal University of Studies.</p>
+
+            <p>Classified as one of the world’s top 2% scientists by Stanford University (2024), Dr. Bhattarai has contributed extensively to the field of renewable energy, publishing over 50 research papers in top-tier journals. His work involves the development of high-efficiency solar cells, which are critical for the advancement of sustainable energy solutions.</p>
+
+            <p>He is also an editor at Springer Nature, and his research focuses on innovative approaches in optoelectronics and solar energy materials. Dr. Bhattarai is passionate about using his expertise to tackle global energy challenges.</p>
+
+            <p>Dr. Bhattarai completed his early education at Pub Kamrup College and Sipajhar HS & MP School. He currently resides in Guwahati, Assam, where he continues to drive significant research efforts in solar energy technologies.</p>
+            <a href="https://drive.google.com/file/d/1E4hOJYVSZsVEuiJGu2arDK3F2ENa0ert/view?usp=sharing" target="_blank" class="dl">View My Resume</a>
+          </div>
         </div>
       </div>
-    </div>
-
-    <!-- Contact Section -->
-    <div class="container" style="margin-top: 50px;">
+      <hr>
       <div class="row">
-        <div class="col-lg-7 contact">
-          <h3>Contact</h3>
+        <!-- Contact form -->
+        <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 contact">
           <form id="contactform" action="https://formspree.io/f/xzzpqype" method="POST">
-            <input type="text" name="name" placeholder="Your name" required>
-            <input type="email" name="_replyto" placeholder="Your email" required>
-            <textarea name="message" placeholder="Your message" rows="4" required></textarea>
-            <input type="submit" value="Send">
+            <h3 class="contactTitle">Contact</h3>
+            <p>Feel free to get in touch with me via social media or by sending a message below.</p>
+            <div class="row conrow">
+              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <input type="text" name="name" placeholder="Your name" class="form-control">
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <input type="email" name="_replyto" placeholder="Your email" class="form-control">
+                <input type="hidden" name="_subject" value="PORTFOLIO EMAIL!" />
+              </div>
+            </div>
+            <div class="row conrow">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <textarea placeholder="Your message" name="message" class="form-control" rows="3"></textarea>
+              </div>
+            </div>
+            <div class="row conrow">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <input type="submit" value="Send">
+              </div>
+            </div>
           </form>
         </div>
-        <div class="col-lg-4 col-lg-offset-1 contactSide">
+        <!-- Contact details -->
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-md-offset-1 col-lg-offset-1 col-sm-offset-1 contactDetails">
           <h3>Details</h3>
-          <ul class="contactDetails">
+          <ul>
             <li><i class="fa fa-map-marker"></i> Guwahati, Assam</li>
             <li><i class="fa fa-envelope-o"></i> sgrbhattarai21[at]gmail[dot]com</li>
             <li><i class="ai ai-google-scholar"></i> <a href="https://scholar.google.com/" target="_blank">Google Scholar</a></li>
-            <!-- Add other links as needed -->
+            <li><i class="ai ai-researchgate"></i> <a href="https://www.researchgate.net/" target="_blank">ResearchGate</a></li>
           </ul>
         </div>
       </div>
     </div>
-
-    <!-- Footer -->
-    <footer>
-      <p>&copy; 2024 Sagar Bhattarai. All rights reserved.</p>
-    </footer>
-
-    <!-- JS -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
   </body>
 </html>
