--- a/about.html
+++ b/about.html
@@ -14,107 +14,43 @@
     <link rel="stylesheet" href="dist/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
     <script src="js/loader_htmls.js"></script>
-    <style>
-      /* Global consistency with header and footer */
-      body {
-        font-family: 'Lato', sans-serif;
-        margin: 0;
-        padding: 0;
-        background: #f4f4f4;
-      }
-      .container {
-        margin-top: 100px;
-      }
-      img {
-        border-radius: 10px;
-      }
-      h3 {
-        font-size: 24px;
-        font-weight: bold;
-        color: #333;
-      }
-      a.dl {
-        display: inline-block;
-        margin-top: 20px;
-        padding: 10px 20px;
-        background: linear-gradient(90deg, #6a11cb, #2575fc);
-        color: #fff;
-        text-decoration: none;
-        border-radius: 20px;
-        transition: background 0.3s ease-in-out;
-      }
-      a.dl:hover {
-        background: linear-gradient(90deg, #2575fc, #6a11cb);
-      }
-      .contact {
-        margin-top: 50px;
-        background: linear-gradient(90deg, rgba(58, 123, 213, 0.1), rgba(108, 92, 231, 0.1));
-        padding: 30px;
-        border-radius: 10px;
-      }
-      .contact input,
-      .contact textarea {
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        margin-bottom: 15px;
-        padding: 10px;
-        width: 100%;
-        box-sizing: border-box;
-      }
-      .contact input[type="submit"] {
-        background: linear-gradient(90deg, #6a11cb, #2575fc);
-        color: #fff;
-        font-weight: bold;
-        cursor: pointer;
-        border: none;
-        transition: background 0.3s ease-in-out;
-      }
-      .contact input[type="submit"]:hover {
-        background: linear-gradient(90deg, #2575fc, #6a11cb);
-      }
-      .contactDetails ul {
-        padding: 0;
-        list-style-type: none;
-      }
-      .contactDetails li {
-        margin-bottom: 15px;
-        font-size: 16px;
-      }
-      .contactDetails li a {
-        color: #2575fc;
-        text-decoration: underline;
-      }
-    </style>
   </head>
   <body>
+    <!-- Import header -->
+    <div data-include="header"></div>
     <div class="container">
       <div class="row content">
-        <!-- About image -->
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        <!--About image start -->
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 cl">
           <img src="images/latest/c.jpeg" title="Dr. Sagar Bhattarai" class="img-responsive" alt="Dr. Sagar Bhattarai" style="opacity:0.8;">
         </div>
-        <!-- About content -->
-        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+        <!--About image start -->
+        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 cr">
+          <!--About content start -->
           <div class="clearfix" style="text-align: justify;">
-            <h3>About Dr. Sagar Bhattarai:</h3>
+            <h3 class="text-xs-center">About Dr. Sagar Bhattarai:</h3>
             <p>Dr. Sagar Bhattarai is a distinguished scientist, researcher, and innovator at the Indian Institute of Technology Guwahati, where he focuses on cutting-edge photovoltaic and perovskite solar cell technologies. He holds a Ph.D. from the National Institute of Technology Arunachal Pradesh, and has previously served as the Head of the Physics Department at Arunachal University of Studies.</p>
 
             <p>Classified as one of the world’s top 2% scientists by Stanford University (2024), Dr. Bhattarai has contributed extensively to the field of renewable energy, publishing over 50 research papers in top-tier journals. His work involves the development of high-efficiency solar cells, which are critical for the advancement of sustainable energy solutions.</p>
-
+            
             <p>He is also an editor at Springer Nature, and his research focuses on innovative approaches in optoelectronics and solar energy materials. Dr. Bhattarai is passionate about using his expertise to tackle global energy challenges.</p>
 
             <p>Dr. Bhattarai completed his early education at Pub Kamrup College and Sipajhar HS & MP School. He currently resides in Guwahati, Assam, where he continues to drive significant research efforts in solar energy technologies.</p>
-            <a href="https://drive.google.com/file/d/1E4hOJYVSZsVEuiJGu2arDK3F2ENa0ert/view?usp=sharing" target="_blank" class="dl">View My Resume</a>
+            <a href="https://drive.google.com/file/d/1E4hOJYVSZsVEuiJGu2arDK3F2ENa0ert/view?usp=sharing"_blank" class="dl">View My Resume</a>
           </div>
+          <!--About content start -->
         </div>
       </div>
-      <hr>
+    </div>
+    <hr>
+    <!-- <hr> -->
+    <div class="container">
       <div class="row">
-        <!-- Contact form -->
-        <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 contact">
+        <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 blogleft contact text-xs-center">
           <form id="contactform" action="https://formspree.io/f/xzzpqype" method="POST">
             <h3 class="contactTitle">Contact</h3>
             <p>Feel free to get in touch with me via social media or by sending a message below.</p>
+            <!--contact form start-->
             <div class="row conrow">
               <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <input type="text" name="name" placeholder="Your name" class="form-control">
@@ -127,6 +63,7 @@
             <div class="row conrow">
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <textarea placeholder="Your message" name="message" class="form-control" rows="3"></textarea>
+                <input type="text" name="_gotcha" style="display:none" />
               </div>
             </div>
             <div class="row conrow">
@@ -134,19 +71,57 @@
                 <input type="submit" value="Send">
               </div>
             </div>
+            <div id="simple-msg"></div>
           </form>
         </div>
-        <!-- Contact details -->
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-md-offset-1 col-lg-offset-1 col-sm-offset-1 contactDetails">
-          <h3>Details</h3>
-          <ul>
-            <li><i class="fa fa-map-marker"></i> Guwahati, Assam</li>
-            <li><i class="fa fa-envelope-o"></i> sgrbhattarai21[at]gmail[dot]com</li>
-            <li><i class="ai ai-google-scholar"></i> <a href="https://scholar.google.com/" target="_blank">Google Scholar</a></li>
-            <li><i class="ai ai-researchgate"></i> <a href="https://www.researchgate.net/" target="_blank">ResearchGate</a></li>
+        <!--contact form end-->
+        <!--contact details start-->
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-md-offset-1 col-lg-offset-1 col-sm-offset-1 col-xs-offset-0 contactSide">
+          <h3 class="contactTitle text-xs-center">Details</h3>
+          <ul style="list-style-type: none; padding-left: 0;" class="list-unstyled contactDetails">
+            <li>
+              <i class="fa fa-map-marker"></i>Guwahati, Assam
+            </li>
+            <li>
+              <i class="fa fa-envelope-o"></i>sgrbhattarai21[at]gmail[dot]com
+            </li>
+            <li>
+              <i class="ai ai-google-scholar"></i>
+              <a href="https://scholar.google.com/citations?user=1Y2FB0wAAAAJ&hl=en" target="_blank">Google Scholar Page</a>
+            </li>
+            <li>
+              <i class="ai ai-researchgate"></i>
+              <a href="https://www.researchgate.net/profile/Sagar-Bhattarai-2" target="_blank">ResearchGate Profile</a>
+            </li>
+            <li>
+              <i class="fa fa-github"></i>
+              <a href="https://github.com/sgrbhattarai11" target="_blank" style="display: inline-block; color: blue; text-decoration: underline;">GitHub Profile</a>
+            </li>
+            <li>
+              <i class="fa fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/dr-sagar-bhattarai-0818b61b5/" target="_blank">LinkedIn Profile</a>
+            </li>
           </ul>
         </div>
+        <!--contact details end-->
       </div>
     </div>
+    <!-- Import footer -->
+    <div data-include="footer"></div>
+    <!-- Google ReCaptchas -->
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdhkAAlAAAAAEBabRsENwuWbJ0gQQgJhfrtm0XB"></script>
+    <script>
+      grecaptcha.enterprise.ready(function() {
+        grecaptcha.enterprise.execute('6LdhkAAlAAAAAEBabRsENwuWbJ0gQQgJhfrtm0XB', {
+          action: 'login'
+        }).then(function(token) {
+          // your recaptcha callback here
+        });
+      });
+    </script>
+    <!--Javascriptfile start -->
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script src="dist/js/lightbox-plus-jquery.min.js"></script>
   </body>
 </html>
