--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,9 @@
-<footer class="footer navbar-fixed-bottom" style="background: linear-gradient(90deg, #4e54c8, #8f94fb); color: #fff; text-align: center; padding: 20px 0; box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);">
+<footer class="footer navbar-fixed-bottom">
   <div class="container">
-    <p class="copyrightText" style="margin: 0; font-size: 16px; font-weight: bold;">
-      &copy; 2024 Sagar Bhattarai. All rights reserved.
-    </p>
+    <ul class="list-unstyled footerLink">
+      <!-- <li><a href="about.html">About</a></li> -->
+      <!-- <li><a href="projects.html">Projects</a></li> -->
+    </ul>
+    <p class="copyrightText">&copy; 2024 Sagar Bhattarai</p>
   </div>
 </footer>
