--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -4,7 +4,6 @@
       <meta charset="utf-8">
       <title>Sagar Bhattarai - Media Coverage</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- <link rel="icon" type="image/png" href="images/logo.png"> -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="css/bootstrap.css">
       <link rel="stylesheet" href="css/style.css">
@@ -12,14 +11,6 @@
       <script src="js/modernizr.custom.js"></script>
       <link href='https://fonts.googleapis.com/css?family=Lato:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
       <script src="js/loader_htmls.js"></script>
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131953460-1"></script>
-      <script>
-         window.dataLayer = window.dataLayer || [];
-         function gtag(){dataLayer.push(arguments);}
-         gtag('js', new Date());
-         gtag('config', 'UA-131953460-1');
-      </script>
       <style>
          /* Styling the Media Coverage Section */
          .media-coverage-header {
@@ -86,71 +77,57 @@
             <!-- Media Coverage List -->
             <div class="media-coverage-list">
                <ul>
-                  <!-- Existing Links -->
+                  <!-- Facebook Links -->
                   <li>
-                     <a href="https://www.youtube.com/watch?app=desktop&v=854QCf_DwPU" target="_blank">
-                        <i class="fa fa-youtube-play"></i> News Live Coverage
+                     <a href="https://www.facebook.com/100069786133671/posts/853599160309614/?mibextid=rS40aB7S9Ucbxw6v" target="_blank">
+                        <i class="fa fa-facebook"></i> Facebook Post 1
                      </a>
                   </li>
                   <li>
-                     <a href="https://www.facebook.com/assamtalkslive/videos/326320497208984/" target="_blank">
-                        <i class="fa fa-facebook"></i> ASSAM TALKS LIVE Coverage
+                     <a href="https://www.facebook.com/100064062369322/posts/927490626063008/?mibextid=rS40aB7S9Ucbxw6v" target="_blank">
+                        <i class="fa fa-facebook"></i> Facebook Post 2
                      </a>
                   </li>
                   <li>
-                     <a href="https://www.facebook.com/story.php?story_fbid=3837373476540387&id=100008033171309&_rdr" target="_blank">
-                        <i class="fa fa-facebook"></i> Facebook Story 1
-                     </a>
-                  </li>
-                  <li>
-                     <a href="https://www.facebook.com/?next=https%3A%2F%2Fm.facebook.com%2Fstory.php%3Fstory_fbid%3D3836862793258122%26id%3D100008033171309&_rdr" target="_blank">
-                        <i class="fa fa-facebook"></i> Facebook Story 2
-                     </a>
-                  </li>
-                  <li>
-                     <a href="https://www.facebook.com/story.php?story_fbid=927490626063008&id=100064062369322&_rdr" target="_blank">
-                        <i class="fa fa-facebook"></i> Gorkhali Colours Coverage
-                     </a>
-                  </li>
-                  <!-- New Links -->
-                  <li>
-                     <a href="https://www.facebook.com/story.php?story_fbid=836845638623001&id=100068927177680&_rdr" target="_blank">
-                        <i class="fa fa-facebook"></i> Facebook Story 3
-                     </a>
-                  </li>
-                  <li>
-                     <a href="https://www.facebook.com/story.php?story_fbid=998054615666530&id=100063860025299&_rdr" target="_blank">
-                        <i class="fa fa-facebook"></i> Facebook Story 4
-                     </a>
-                  </li>
-                  <li>
-                     <a href="https://www.facebook.com/story.php?story_fbid=1017402313467255&id=100055924881499&_rdr" target="_blank">
-                        <i class="fa fa-facebook"></i> Facebook Story 5
-                     </a>
-                  </li>
-                  <li>
-                     <a href="https://www.facebook.com/100089675414571/videos/2472301136294099/" target="_blank">
+                     <a href="https://www.facebook.com/share/v/JVcHGDKcPJ5erjiu/?mibextid=jmPrMh" target="_blank">
                         <i class="fa fa-facebook"></i> Facebook Video 1
                      </a>
                   </li>
                   <li>
-                     <a href="https://www.youtube.com/watch?app=desktop&v=2aXtBtlaHss" target="_blank">
-                        <i class="fa fa-youtube-play"></i> YouTube Video 2
-                     </a>
-                  </li>
-                  <li>
-                     <a href="https://www.facebook.com/61550263392667/videos/414249358359820/" target="_blank">
+                     <a href="https://fb.watch/uKcnnw3OsX/?mibextid=rS40aB7S9Ucbxw6v" target="_blank">
                         <i class="fa fa-facebook"></i> Facebook Video 2
                      </a>
                   </li>
                   <li>
-                     <a href="https://www.facebook.com/DY365/videos/1040660197759805/" target="_blank">
-                        <i class="fa fa-facebook"></i> DY365 Facebook Video
+                     <a href="https://www.facebook.com/share/v/1J81rqwqWR1deb4D/?mibextid=xfxF2i" target="_blank">
+                        <i class="fa fa-facebook"></i> Facebook Video 3
                      </a>
                   </li>
                   <li>
-                     <a href="https://www.facebook.com/newsishan/videos/1672076586970844/" target="_blank">
-                        <i class="fa fa-facebook"></i> News Ishan Facebook Video
+                     <a href="https://www.facebook.com/share/v/HyufqfcUg86RrMYR/?mibextid=qi2Omg" target="_blank">
+                        <i class="fa fa-facebook"></i> Facebook Video 4
+                     </a>
+                  </li>
+                  <li>
+                     <a href="https://www.facebook.com/share/v/NSmNMpyzaCQ2bJU8/?mibextid=qi2Omg" target="_blank">
+                        <i class="fa fa-facebook"></i> Facebook Video 5
+                     </a>
+                  </li>
+                  <li>
+                     <a href="https://www.facebook.com/DY365/videos/1040660197759805/?mibextid=rS40aB7S9Ucbxw6v" target="_blank">
+                        <i class="fa fa-facebook"></i> DY365 Facebook Video
+                     </a>
+                  </li>
+                  
+                  <!-- YouTube Links -->
+                  <li>
+                     <a href="https://youtu.be/2aXtBtlaHss?si=UFWjFubi_PwBneSz" target="_blank">
+                        <i class="fa fa-youtube-play"></i> YouTube Video 1
+                     </a>
+                  </li>
+                  <li>
+                     <a href="https://youtu.be/854QCf_DwPU?si=AbnKOhip23Ww3GaO" target="_blank">
+                        <i class="fa fa-youtube-play"></i> YouTube Video 2
                      </a>
                   </li>
                </ul>
@@ -163,21 +140,8 @@
       <!-- Import footer -->
       <div data-include="footer"></div>
 
-      <!--Javascriptfile start -->
+      <!-- Javascript Files -->
       <script type="text/javascript" src="js/jquery.min.js"></script>
       <script type="text/javascript" src="js/bootstrap.js"></script>
-      <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
-      <script src="js/modernizr.custom.js"></script>
-      <script src="js/masonry.pkgd.min.js"></script>
-      <script src="js/imagesloaded.pkgd.min.js"></script>
-      <script src="js/classie.js"></script>
-      <script src="js/colorfinder-1.1.js"></script>
-      <script src="js/gridScrollFx.js"></script>
-      <script>
-         var masonryClass, container = $("#grid");
-         	new GridScrollFx( document.getElementById( 'grid' ), {
-         		viewportFactor : 0.4
-         	} );
-      </script>
    </body>
 </html>
