--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -92,7 +92,7 @@
       </style>
    </head>
    <body>
-      <!-- Header -->
+      <!-- Import header -->
       <div data-include="header"></div>
 
       <div class="container">
@@ -168,7 +168,7 @@
          </div>
       </div>
 
-      <!-- Footer -->
+      <!-- Import footer -->
       <div data-include="footer"></div>
 
       <!-- Javascript -->
