--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -14,7 +14,7 @@
          .media-header {
             text-align: center;
             font-size: 20px;
-            font-weight: bold;
+            <!--font-weight: bold;-->
             padding: 15px 0;
             color: black;
          }
