--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -131,10 +131,11 @@
          <!-- YouTube Coverage Section -->
          <div id="youtube-section" class="media-section">
             <a href="https://youtu.be/2aXtBtlaHss?si=UFWjFubi_PwBneSz" target="_blank" class="media-link">
-               <span class="youtube-logo">YouTube</span> Video 1
+               <span class="youtube-logo">YouTube</span> Times Dumunichowki 
             </a>
             <a href="https://youtu.be/854QCf_DwPU?si=AbnKOhip23Ww3GaO" target="_blank" class="media-link">
-               <span class="youtube-logo">YouTube</span> Video 2
+               <span class="youtube-logo">YouTube</span> News Live
+
             </a>
          </div>
 
