--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -134,7 +134,7 @@
                <span class="youtube-logo">YouTube</span> Times Dumunichowki 
             </a>
             <a href="https://youtu.be/854QCf_DwPU?si=AbnKOhip23Ww3GaO" target="_blank" class="media-link">
-               <span class="youtube-logo">YouTube</span> News Live
+               <span class="youtube-logo">YouTube</span> বিশ্বৰ শ্ৰেষ্ঠ দুই শতাংশ বিজ্ঞানীৰ তালিকাত ছিপাঝাৰৰ ডঃ সাগৰ ভট্টৰায়
 
             </a>
          </div>
