--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -131,7 +131,7 @@
          <!-- YouTube Coverage Section -->
          <div id="youtube-section" class="media-section">
             <a href="https://youtu.be/2aXtBtlaHss?si=UFWjFubi_PwBneSz" target="_blank" class="media-link">
-               <span class="youtube-logo">YouTube</span> Times Dumunichowki 
+               <span class="youtube-logo">YouTube</span> গেৰেণ্ট গাঁৱৰ ডঃ সাগৰ ভট্টৰায় ষ্টেণ্ডফৰ্ড বিশ্ববিদ্যালয়ে প্ৰকাশ কৰা বিশ্বৰ শ্ৰেষ্ঠ ২ শতাংশ বিজ্ঞানী
             </a>
             <a href="https://youtu.be/854QCf_DwPU?si=AbnKOhip23Ww3GaO" target="_blank" class="media-link">
                <span class="youtube-logo">YouTube</span> বিশ্বৰ শ্ৰেষ্ঠ দুই শতাংশ বিজ্ঞানীৰ তালিকাত ছিপাঝাৰৰ ডঃ সাগৰ ভট্টৰায়
