--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -115,16 +115,16 @@
          <!-- Facebook Coverage Section -->
          <div id="facebook-section" class="media-section">
             <a href="https://www.facebook.com/100069786133671/posts/853599160309614/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="media-link">
-               <i class="fa fa-facebook"></i> Facebook Post 1
+               <i class="fa fa-facebook"></i> ষ্টেনফ'ৰ্ড বিশ্ববিদ্যালয়ৰ World's Top 2% Scientists ....see more
             </a>
             <a href="https://www.facebook.com/100064062369322/posts/927490626063008/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="media-link">
-               <i class="fa fa-facebook"></i> Facebook Post 2
+               <i class="fa fa-facebook"></i> IIT गुवाहाटी अनुसन्धान वैज्ञानिक हाम्रो गोर्खे छोरा डा. सागर भट्टराई विश्वका ... see more
             </a>
             <a href="https://www.facebook.com/share/v/JVcHGDKcPJ5erjiu/?mibextid=jmPrMh" target="_blank" class="media-link">
-               <i class="fa fa-facebook"></i> Facebook Video 1
+               <i class="fa fa-facebook"></i> বিশ্বৰ শ্ৰেষ্ঠ ২ শতাংশ বিজ্ঞানীৰ তালিকাত watch now
             </a>
             <a href="https://fb.watch/uKcnnw3OsX/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="media-link">
-               <i class="fa fa-facebook"></i> Facebook Video 2
+               <i class="fa fa-facebook"></i> শ্ৰেষ্ঠ বিজ্ঞানীৰ তালিকাত নাম সন্নিবিষ্ট ছিপাঝাৰৰ যুৱকৰ watch now
             </a>
          </div>
 
