--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -121,10 +121,10 @@
                <i class="fa fa-facebook"></i> IIT गुवाहाटी अनुसन्धान वैज्ञानिक हाम्रो गोर्खे छोरा डा. सागर भट्टराई विश्वका ... see more
             </a>
             <a href="https://www.facebook.com/share/v/JVcHGDKcPJ5erjiu/?mibextid=jmPrMh" target="_blank" class="media-link">
-               <i class="fa fa-facebook"></i> বিশ্বৰ শ্ৰেষ্ঠ ২ শতাংশ বিজ্ঞানীৰ তালিকাত watch now
+               <i class="fa fa-facebook"></i> বিশ্বৰ শ্ৰেষ্ঠ ২ শতাংশ বিজ্ঞানীৰ তালিকাত ... see more
             </a>
             <a href="https://fb.watch/uKcnnw3OsX/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="media-link">
-               <i class="fa fa-facebook"></i> শ্ৰেষ্ঠ বিজ্ঞানীৰ তালিকাত নাম সন্নিবিষ্ট ছিপাঝাৰৰ যুৱকৰ watch now
+               <i class="fa fa-facebook"></i> শ্ৰেষ্ঠ বিজ্ঞানীৰ তালিকাত নাম সন্নিবিষ্ট ছিপাঝাৰৰ যুৱকৰ ... see more
             </a>
          </div>
 
