--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -129,6 +129,18 @@
             <a href="https://fb.watch/uKcnnw3OsX/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="media-link">
                <i class="fa fa-facebook"></i> শ্ৰেষ্ঠ বিজ্ঞানীৰ তালিকাত নাম সন্নিবিষ্ট ছিপাঝাৰৰ যুৱকৰ ... see more
             </a>
+            <a href="https://www.facebook.com/share/v/1J81rqwqWR1deb4D/?mibextid=xfxF2i" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> ছিপাঝাৰ গেৰেণ্ট গাঁৱৰ ডঃ সাগৰ ভট্টৰায় ষ্টেণ্ডফৰ্ড ... see more
+            </a>  
+            <a href="https://www.facebook.com/share/v/HyufqfcUg86RrMYR/?mibextid=qi2Omg" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> বিশ্বৰ শ্ৰেষ্ঠ দুই শতাংশ বিজ্ঞানীৰ ... see more
+            </a>
+            <a href="https://www.facebook.com/sangbadlahar09/videos/1186119422689776/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> ষ্টেণ্ডফৰ্ড বিশ্ববিদ্যালয়ে প্ৰকাশ কৰা শ্ৰেষ্ঠ  ... see more
+            </a>
+            <a href="https://www.facebook.com/share/v/NSmNMpyzaCQ2bJU8/?mibextid=qi2Omg" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> অসমলৈ সুনাম কঢ়িয়ালে ছিপাঝাৰ গেৰেণ্ট ... see more
+            </a>
          </div>
 
          <!-- YouTube Coverage Section -->
